# Competitive-Programming

./: .env.example  .gitignore  Competitive_Programming.opam  README.md  a.out  array_test  ast.ml  debug_output.txt  dune-project  examples_mag&augi  ir.ll  lexer.mll  mini-language.s  output  output.ll  output.s  output.txt  parser.mly  program  program.ll  program.tac  run.sh  semantic_examples.py  syntax_final_ish  test.while  test_copy_dead.while  test_dbe.while  test_new_syntax.pig  test_opt.while  test_output.s  testoutput
.devcontainer/: Dockerfile  devcontainer.json
Exercises/: Cranes
_build/: .db  .digest-db  log
_build/default/: Competitive_Programming.dune-package  Competitive_Programming.install  README.md
docs/: README.md  architecture.md  backend.md  common.md  error_handling_plan.md  frontend.md  optimization.md  optimization_enhancements.md  usage.md
lib/: ast.ml  codegen.ml  codegen.mli  competitive_programming.ml  dune  env.ml  hir.ml  hir.mli  interpreter.ml  lexer.mll  mips_codegen.ml  parse_error.ml  parser.mly  semant.ml  semantics.ml  semantics.mli
lib/backend/: codegen.ml  codegen.mli  dune  tac_gen.ml  (+3 more)
preliminary_examples/: phil&fabs.md  semantic_examples.py  syntax_examples.md  syntax_final_ish
test/: array.pig  array_assignment.pig  array_bounds_test.pig  array_layout_test.pig  comments_test.pig  complex.pig  dune  let_int.wl  string_if.wl  string_let.wl  string_test.wl  test_Competitive_Programming.cmi  test_Competitive_Programming.ml  test_codegen.ml  test_hir.ml  test_lexer.ml  test_parser.ml  test_semant.ml  typecast_test.pig
(+68 files in other folders)
